language_tests/source_files/valid/lists_basic.tr
// Test: Lists Basic
// Checks basic list creation and append.

func main() {
    var a: [string] = List()
    a.append("Hello, World")
    
    
    std.print("PASS: Lists basic usage\n")
}
